[package]
name = "KillNeac"
version = "0.0.2"
edition = "2024"

[dependencies]
sysinfo = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser", "winreg", "synchapi", "errhandlingapi", "winerror", "handleapi"] }

[build-dependencies]
winres = "0.1"

[profile.release]
strip = true
lto = true
